--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,11 +54,17 @@
         <item>Pants</item>
         <item>Hat</item>
         <item>Glasses</item>
+        <item>Shoe</item>
     </string-array>
 
     <string-array name="style">
         <item>Casual</item>
         <item>Smart-Casual</item>
+        <item>Formell-Business</item>
+        <item>Leger</item>
+        <item>Sportive</item>
+        <item>Vintage</item>
+
     </string-array>
 
     <string name="button">Button</string>
