generating outfits with input is working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string-array name="style">
         <item>Casual</item>
         <item>Smart-Casual</item>
-        <item>Formell-Business</item>
+        <item>Formal-Business</item>
         <item>Leger</item>
         <item>Sportive</item>
         <item>Vintage</item>
